using JetBrains.Annotations;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Runtime.CompilerServices;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts.Utils
{
    internal class AnimationStrings
    {
        internal static string move = "IsMoving";
        internal static string sprint = "IsSprint";
        internal static string canMove = "CanMove";
        internal static string isGrounded = "IsGrounded";
        internal static string isOnWall = "IsOnWall";
        internal static string isOnCeiling = "IsOnCeiling";
        internal static string velY = "VelY";
        internal static string attack = "Attack";
        internal static string isAlive = "IsAlive";
        internal static string hasTarget = "HasTarget";
        internal static string hitTrigger = "Hit";
        internal static string lockVelocity = "LockVelocity";
        internal static string attackCooldown = "AttackCooldown";
    }
}